# fractals

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: CompilerOptions.cmake  CustomCommands.cmake  SetupSFML.cmake
include/: Button.h  FractalWindow.h  MandelbrotFractal.h  ThreadPool.h
src/: Button.cpp  FractalWindow.cpp  MandelbrotFractal.cpp  ThreadPool.cpp
